<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="412dp"
    android:layout_height="915dp"
    android:orientation="vertical"
    android:background="#F3F5F7"
    tools:context=".ui.view.MainActivity" >

    <RadioGroup
        android:id="@+id/rg_transaction_type"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rb_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rb_expense_add"
            android:checked="true"
            android:textSize="16sp"
            android:background="@drawable/rounded_button"
            android:button="@null"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="#1073F5"/>

        <RadioButton
            android:id="@+id/rb_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rb_income_add"
            android:textSize="16sp"
            android:background="@drawable/rounded_button"
            android:button="@null"
            android:gravity="center"
            android:textColor="#1073F5"
            android:backgroundTint="#D5E7FE"/>

    </RadioGroup>

    <LinearLayout
        style="bold"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/timetv"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetv_add"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_editext"
            android:ems="10"
            android:hint="Select date"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/amounttv"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amounttv_add"
            android:textSize="20sp"
            android:textColor="#FF000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Enter the amount"
            android:inputType="numberDecimal"
            android:background="@drawable/rounded_editext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/myResult"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FF000000"
            android:textStyle="bold"
            android:text="@string/myResult_add" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Enter notes"
            android:inputType="text"
            android:background="@drawable/rounded_editext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categorytv_add"
            android:textSize="20sp"
            android:textColor="#FF000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_edit_categories"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="#1073F5"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_category_grid"
        tools:itemCount="9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"  android:background="@drawable/rounded_editext"
        android:backgroundTint="@color/white"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnsave"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#1073F5"
            android:text="Save expense"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:strokeColor="#DDDDDD"
            app:strokeWidth="3dp" />
    </LinearLayout>



</LinearLayout>